<resources>
    <string name="app_name">googleMapTest</string>
    <string name="title_activity_maps">Map</string>

    <!--used in testActivity-->
    <string name="switch_current_choice">switch</string>
    <string name="clear_all">clear all</string>

    <!--used in marker_linear_layout-->
    <string name="add_default_marker">add default marker</string>
    <string name="add_drawable_marker">add drawable marker</string>
    <string name="add_layout_marker">add layout marker</string>

    <!--used in circle_linear_layout-->
    <string name="add_default_circle">add default circle</string>
    <string name="add_drawable_circle">add drawable marker</string>

    <!--used in camera_linear_layout-->
    <string name="add_zoom_1">add zoom(1F)</string>
    <string name="substract_zoom_1">substract zoom(1F)</string>
    <string name="forbid_camera_move">forbid camera move</string>
    <string name="free_camera_move">free camera move</string>

    <!--used in cluster_linear_layout-->
    <string name="start_default_cluster">start default cluster</string>
    <string name="start_cluster">start cluster</string>
    <string name="stop_cluster">stop cluster</string>
    <string name="hide_some_markers">hide some markers</string>
</resources>
