<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/add_zoom_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/add_zoom_1"
        android:gravity="center"
        android:textSize="16sp"
        android:textAllCaps="false"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/substract_zoom_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/substract_zoom_1"
        android:textSize="16sp"
        android:textAllCaps="false"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/forbid_camera_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/forbid_camera_move"
        android:textSize="16sp"
        android:textAllCaps="false"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/free_camera_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/free_camera_move"
        android:textSize="16sp"
        android:textAllCaps="false"/>

</LinearLayout>