<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/add_default_marker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/add_default_marker"
        android:gravity="center"
        android:textSize="16sp"
        android:textAllCaps="false"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/add_drawable_marker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/add_drawable_marker"
        android:textSize="16sp"
        android:textAllCaps="false"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/add_layout_marker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/add_layout_marker"
        android:textSize="16sp"
        android:textAllCaps="false"/>

</LinearLayout>